code25_all/scala/16319796.txt
scala> def foo( f: => String) = println(f)
foo: (f: => String)Unit

scala> def foo( f: String*) = f.map(println)
foo: (f: String*)Seq[Unit]

scala> def foo( f: =>String* ) = f.map(println)
<console>:1: error: ')' expected but identifier found.
       def foo( f: =>String* ) = f.map(println)
                       ^

scala> def foo( f: (=>String)* ) = f.map(println)
<console>:1: error: no by-name parameter type allowed here
       def foo( f: (=>String)* ) = f.map(println)
                ^

